--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,11 +29,11 @@ clap = { version = "4.3.11", features = ["derive"] }
 env_logger = "0.10.0"
 indexmap = "2.0.0"
 
-wasm-encoder = "0.31.0"
-wasm-metadata = "0.10.0"
-wat = "1.0.68"
-wit-parser = "0.9.1"
-wit-component = "0.13.0"
+wasm-encoder = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle"}
+wasm-metadata = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle"}
+wat = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle"}
+wit-parser = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle"}
+wit-component = { git = "https://github.com/macovedj/wasm-tools", branch = "bundle"}
 
 wit-bindgen-core = { path = 'crates/core', version = '0.9.0' }
 wit-bindgen-c = { path = 'crates/c', version = '0.9.0' }
